@@ -2,7 +2,8 @@ Revision history for Graphics-Primitive
 
 0.31
   - Fix POD typo (thanks Brian Cassidy)
-  - 
+  - Driver: Add _draw_circle and _draw_ellipse
+  - Bump Deps
 
 0.30
   - Bump Forest dependency to 0.4 to ease Win32 problems
